# py-okf

./: .gitignore  DESCRIPTION.md  LICENSE  README.md  pyproject.toml
src/pyokf/: __init__.py  analyzer.py  bundle.py  cli.py  generator.py  models.py  visualizer.py
tests/: conftest.py  test_analyzer.py  test_bundle.py  test_cli.py  test_generator.py  test_models.py  test_visualizer.py
tests/fixtures/: sample_module.py
tests/fixtures/sample_okf/: sample.md
