[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-okf"
version = "0.1.0"
description = "Python library for Open Knowledge Format (OKF) file generation and refresh"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["okf", "documentation", "ast", "code-analysis", "open-knowledge-format"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
watch = [
    "watchdog>=3.0",
]

[project.scripts]
okf = "pyokf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/pyokf"]
branch = true
